Fix : Enrichment worker for keeping game titles clean and fixed key for clarity
