# docs/swagger.json
@@ -1245,15 +1245,15 @@
                 "content": {
                     "type": "string"
                 },
+                "game_title": {
+                    "type": "string"
+                },
                 "igdb_id": {
                     "type": "integer"
                 },
                 "rating": {
                     "description": "0-5",
                     "type": "number"
-                },
-                "title": {
-                    "type": "string"
                 }
             }
         },
@@ -1301,14 +1301,14 @@
         "internal_handlers.UpdateLibraryRequest": {
             "type": "object",
             "properties": {
+                "game_title": {
+                    "type": "string"
+                },
                 "igdb_id": {
                     "type": "integer"
                 },
                 "status": {
                     "description": "playing, completed, backlog, dropped, wishlist",
-                    "type": "string"
-                },
-                "title": {
                     "type": "string"
                 }
             }
